About page created.

--- a/about.html
+++ b/about.html
@@ -16,20 +16,18 @@
     <nav class="navigation">
       <ul>
         <li>React Memory Game</li>
-        <li><a href="index.html" class="active">Game</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="index.html">Game</a></li>
+        <li><a href="about.html" class="active">About</a></li>
       </ul>
     </nav>
     <section class="header-wrapper">
       <div class="header-image">
-        <h1 class="header-title">Click the Correct Video Games</h1>
+        <h1 class="header-title">About this game</h1>
       </div>
     </section>
   </header>
   <main>
-    <div class="picture-row">Row 1</div>
-    <div class="picture-row">Row 2</div>
-    <div class="picture-row">Row 3</div>
+    <p>Some text here.</p>
   </main>
   <footer>
     <p>&copy; Brandon Lawson 2019</p>
